--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,6 +1,32 @@
-@misc{test,
-	author = {test},
-	title = {test},
-	howpublished = {\url{http://www.test.com}},
-	year = {2023},
+@misc{Devart, 
+    title={DbForge SQL complete - powerful T-SQL formatting tool}, 
+    url={https://www.devart.com/dbforge/sql/sqlcomplete/}, 
+    journal={Devart Software}, 
+    author={Devart},
+    year={2023}
 }
+
+@misc{OpenAI, 
+    title={Chatgpt}, 
+    url={https://openai.com/chatgpt}, 
+    journal={ChatGPT}, 
+    author={OpenAI},
+    year={2023}
+}
+
+@misc{You, 
+    title={The Progressive JavaScript Framework}, 
+    url={https://vuejs.org/}, 
+    journal={Vue.js - The Progressive JavaScript Framework | Vue.js}, 
+    author={You, Evan},
+    year={2023}
+}
+
+@misc{Google, 
+    title={Charts | google for developers}, 
+    url={https://developers.google.com/chart}, 
+    journal={Google}, 
+    publisher={Google}, 
+    author={Google},
+    year={2023}
+} 
