--- a/doc/src/conclusions.tex
+++ b/doc/src/conclusions.tex
@@ -1,1 +1,24 @@
-\section{Conclusions and Recommendations}
+\section{Conclusiones}
+
+En resumen, el proyecto de optimización de bases de datos para Home Credit se
+destaca por su enfoque completo, desde la construcción de modelos E-R hasta la
+implementación de funciones de migración y seguridad. La aplicación web
+resultante, desarrollada en Vue.js, ofrece una interfaz intuitiva y visualmente
+atractiva para acceder y analizar datos. 
+
+De acuerdo con los resultados de las pruebas de rendimiento, la base de datos 
+optimizada es capaz de manejar un gran número de solicitudes simultáneas sin 
+problemas, lo cual se considera un éxito en el rango de aplicación del 
+proyecto y los estándares detallados en el documento de requerimientos.
+
+\section{Recomendaciones}
+
+Si bien el caso de Home Credit es un ejemplo de éxito de la implementación de 
+una base de datos relacional, sin embargo existen algunas excepciones en las 
+cuales Home Credit no es muy adaptable, principalmente en el caso de 
+que al ser un dataset inicialmente pensado para un modelo de aprendizaje 
+automático, no se cuenta con la información necesaria para realizar un 
+análisis de datos más profundo el cual pueda contar con fechas y datos 
+históricos de los clientes, lo cual es un factor importante para la 
+implementación de un sistema que busca generar estadísticas en una vista 
+de dashboard.
