--- a/doc/lib/index.tex
+++ b/doc/lib/index.tex
@@ -1,7 +1,7 @@
 \pagenumbering{roman}
 
 % Table of contents
-\renewcommand\contentsname{\large{Table of Contents}}
+\renewcommand\contentsname{\large{Tabla de contenidos}}
 \tableofcontents
 \setcounter{tocdepth}{2}
 \newpage
