--- a/doc/main.tex
+++ b/doc/main.tex
@@ -3,7 +3,7 @@
 
 % Front page
 \thispagestyle{empty}
-\title{\Large \textbf{Project}}
+\title{\Large \textbf{Proyecto}}
 \author{Johan Rodríguez \\Mathew Carballo}
 \affiliation{Instituto Tecnológico de Costa Rica}
 \course{IC4302 - Bases de Datos II}
@@ -17,11 +17,7 @@
 % Index
 \input{lib/index.tex}
 
-% Executive summary
-\input{src/executive_summary.tex}
-
 % Content
-\input{src/objectives.tex}
 \input{src/introduction.tex}
 \input{src/development.tex}
 \input{src/conclusions.tex}
